# swpui

./: .envrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  deny.toml  dist-workspace.toml  flake.nix  release-plz.toml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  🐛-bug-report.md
.github/workflows/: main.yml  mirror.yml  publish-dryrun.yml  release-plz.yml
src/: app.rs  config.rs  glob.rs  hash.rs  input.rs  lib.rs  main.rs  path.rs  prelude.rs  preview.rs  replace.rs  search.rs  spinner.rs  types.rs  ui.rs  utils.rs
src/app/: apply.rs  input.rs  preview.rs  search.rs
src/preview/: cache.rs  data.rs  worker.rs
src/ui/: file_list.rs  preview.rs
src/ui/preview/: builder.rs
tests/: integration.rs
