[package]
authors = ["Valentin Bersier <hi@beeb.li>"]
edition = "2024"
name = "swpui"
repository = "https://github.com/beeb/swpui"
rust-version = "1.89.0"
version = "0.1.0"

[[bin]]
name = "swp"
path = "src/main.rs"

[lints.clippy]
allow_attributes = "warn"
expect_used = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
mod_module_files = "warn"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[dependencies]
anyhow = "1.0.102"
ratatui = "0.30.0"

[profile.release]
lto = "thin"
