[package]
authors = ["Valentin Bersier <hi@beeb.li>"]
edition = "2024"
name = "swpui"
repository = "https://github.com/beeb/swpui"
rust-version = "1.94.0"
version = "0.1.0"

[[bin]]
name = "swp"
path = "src/main.rs"

[lints.clippy]
allow_attributes = "warn"
expect_used = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
mod_module_files = "warn"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[dependencies]
anyhow = "1.0.102"
convert_case = "0.11.0"
ignore = "0.4.23"
memchr = "2.7.4"
rat-widget = "3.2.1"
ratatui = "0.30.0"
regex = "1.11.1"
sha2 = "0.11.0"
tempfile = "3.19.1"
unicode-width = "0.2"

[profile.release]
lto = "thin"
