[package]
name = "swpui"
version = "0.7.2"
edition = "2024"
rust-version = "1.94.1"
description = "TUI utility to search and replace text, with a focus on ergonomics, speed and case-awareness in source code"
readme = "./README.md"
repository = "https://github.com/beeb/swpui"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "swp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
convert_case = "0.11.0"
dunce = "1.0.5"
etcetera = "0.11.0"
ignore = "0.4.23"
memchr = "2.7.4"
rat-widget = "3.2.1"
ratatui = "0.30.0"
rayon = "1.12.0"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
tempfile = "3.19.1"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
unicode-width = "0.2"

[lints.clippy]
allow_attributes = "warn"
expect_used = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
mod_module_files = "warn"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.release]
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
